<resources>
    <string name="app_name">ProjectManager</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_task_list">TaskListActivity</string>
    <string name="status_created">New</string>
    <string name="status_started">Started</string>
    <string name="status_done">Done</string>
    <string name="status">Status</string>
    <string name="customer">Customer</string>
    <string name="project">Project</string>
    <string name="parent_task">Parent task</string>
    <string name="name">Name</string>
    <string name="date_placeholder">10/08/2015</string>
    <string name="time_placeholder">11:45 - 12:56</string>
    <string name="status_null" />
    <string name="title_activity_tasks">TasksActivity</string>
    <string name="action_add">Add</string>
    <string name="add_task">Add task</string>
    <string name="edit_task">Edit task</string>
    <string name="action_save">Save</string>
    <string name="delete_task">Delete task</string>
    <string name="delete_task_confirmation_message">Are you sure?</string>
    <string name="action_delete">Delete</string>
    <string name="can_not_create_data_dir">Can\'t create data directory</string>
    <string name="status_paused">Paused</string>
    <string name="status_icon">status icon</string>
    <string name="task_name_placeholder">task name</string>
    <string name="time_range_placeholder">11:43 - 15:21</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="done">Done</string>
    <string name="status_restarted">Restarted</string>
    <string name="parent_hierarchy_placeholder"><![CDATA[parent <- sub parent <- subsub parent <- subsubsub parent <- subsubsubsub parent]]></string>
    <string name="task_name">Task name</string>
</resources>
