<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/parent_hierarchy_placeholder"
        android:id="@+id/parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:singleLine="true"
        android:ellipsize="end" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_name_placeholder"
        android:id="@+id/name"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_below="@+id/parent"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/name"
        android:layout_marginTop="10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/status"
            android:src="@drawable/ic_assignment_black_48dp"
            android:contentDescription="@string/status_icon" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_placeholder"
            android:id="@+id/time"
            android:layout_gravity="center_vertical"
            android:textStyle="italic"
            android:textSize="18sp"
            android:gravity="center"
            android:maxLines="2"
            android:ellipsize="end"
            android:singleLine="false"
            android:clickable="true"
            android:layout_marginLeft="5dp" />

    </LinearLayout>

</RelativeLayout>